--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </header>
         <div class="link-wrapper">
-            <a class="link-to-book" href="http://localhost/Reservation.php"> Make a reservation</a>
+            <a class="link-to-book" href="Reservation.php"> Make a reservation</a>
             <p></p>
             <a class="link-to-book" href="Menu.html"> View our menu</a>
         </div>
