--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <nav>
         <ul class="nav">
             <li class="nav-item">
-                <a class="nav-square" href="http://localhost/DAW-Project/index.html">Index</a>
+                <a class="nav-square" href="index.html">Index</a>
             </li>
             <li class="nav-item">
-                <a class="nav-square" href="http://localhost/DAW-Project/Menu.html">Menu</a>
+                <a class="nav-square" href="Menu.html">Menu</a>
             </li>
             <li class="nav-item">
-                <a class="nav-square" href="http://localhost/Reservation.php">Reservation</a>
+                <a class="nav-square" href="Reservation.php">Reservation</a>
             </li>
             <li class="nav-item">
-                <a class="nav-square" href="http://localhost/DAW-Project/About.php">About Us</a>
+                <a class="nav-square" href="About.php">About Us</a>
             </li>
         </ul>
     </nav>
